# AutomaticTradingAgent

./: .gitignore  .replit  FeatureEngineerImprovementPlan.md  PROMPT.md  Pasted-ArgumentError-Argument-sqlite-on-conflict-is-not-accepted-by-dialect-sqlite-on-behalf-of-class-1733365323935.txt  Pasted-I-have-an-existing-Python-implementation-of-a-trading-agent-that-uses-the-Proximal-Policy-Optimizati-1733369430948.txt  Pasted-Identified-Issues-and-Next-Steps-Remove-Duplicated-Initialization-Code-Rationale-In-the-init-me-1733499338997.txt  Pasted-No-Early-Exit-in-Parameter-Evaluation-In-optimize-while-there-is-an-early-stopping-condition-i-1733780500287.txt  Pasted-Refine-the-update-state-Method-for-Consistent-State-Tracking-Change-Needed-Ensure-that-portfolio-an-1733705868814.txt  Pasted-Stateful-Machine-learning-strategy-Strategy-Logic-This-strategy-aims-to-predict-the-price-movement-1733368893541.txt  Pasted-Strategy-Logic-This-strategy-aims-to-predict-the-price-movements-of-the-top-low-volatility-stocks-i-1733368797492.txt  Pasted-System-Message-You-are-a-highly-capable-AI-refactoring-assistant-Your-goal-is-to-update-and-repair-1733978064245.txt  Pasted-ValueError-too-many-values-to-unpack-expected-4-Traceback-File-home-runner-TradeAI-financequ-1733491383323.txt  Pasted-ValueError-too-many-values-to-unpack-expected-4-Traceback-File-home-runner-TradeAI-financequan-1733442753259.txt  Pasted-alueError-too-many-values-to-unpack-expected-4-Traceback-File-home-runner-TradeAI-financequa-1733490559588.txt  Pasted-import-plotly-graph-objects-as-go-from-plotly-subplots-import-make-subplots-import-pandas-as-pd--1733366194455.txt  README.md  TESTing  TradingAgentUI.py  agent.py  best_hyperparameters.json  callbacks.py  config.py  data_download_test.py  data_handler.py  debug_training.py  decorators.py  dependencies.md  environment.py  hyperparameter_optimizer.py  hyperparameter_tuning_results.csv  main (copy).py  main.py  models.py  pyproject.toml  replit.nix  sql_data_manager.py  (+10 more)
(+1585 files in other folders)
