[project]
name = "repl-nix-tradeai-sim"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gym>=0.26.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "stable-baselines3>=2.3.2",
    "streamlit>=1.40.2",
    "yfinance>=0.2.50",
]
