[project]
name = "repl-nix-tradeai-sim"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gym>=0.26.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "shimmy>=0.2.1",
    "sqlalchemy>=2.0.36",
    "stable-baselines3>=2.3.2",
    "streamlit>=1.40.2",
    "ta>=0.11.0",
    "tensorboard>=2.18.0",
    "yfinance>=0.2.50",
    "gymnasium>=0.29.1",
    "torch>=2.5.1",
    "tqdm",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
